# heimdall_multibeam

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  aclocal.m4  bootstrap  config.h.in  configure  configure.in  cuda.mk
Applications/: Candidates.C  Makefile.am  Makefile.in  candidate.plt  candidate_profiler.C  coincidencer.C  coincidencer_client.C  fil2pgm.C  generate_dmlist.C  heimdall.C
Applications/hd/: Candidates.h
Formats/: Makefile.am  Makefile.in  PSRDadaRingBuffer.C  SigprocFile.C  giant_maker.C  psrdada_ring_buffer.C  sigproc_file.C
Formats/hd/: DataSource.h  PSRDadaRingBuffer.h  SigprocFile.h  data_source.h  header.h  psrdada_ring_buffer.h  sigproc_file.h
Network/: ClientSocket.C  Makefile.am  Makefile.in  ServerSocket.C  Socket.C  client_socket.C  server_socket.C  socket.C
Network/hd/: ClientSocket.h  ServerSocket.h  Socket.h  SocketException.h  client_socket.h  server_socket.h  socket.h
Pipeline/: Makefile.am  Makefile.in  clean_filterbank_rfi.cu  default_params.C  error.C  find_giants.cu  get_rms.cu  label_candidate_clusters.cu  matched_filter.cu  measure_bandpass.cu  median_filter.cu  merge_candidates.cu  outtakes.C  parse_command_line.C  pipeline.cu  remove_baseline.cu
Pipeline/hd/: are_coincident.cuh  cached_allocator.cuh  clean_filterbank_rfi.h  default_params.h  error.h  find_giants.h  get_rms.h  label_candidate_clusters.h  matched_filter.h  maths.h  measure_bandpass.h  median_filter.h  merge_candidates.h  params.h  parse_command_line.h  pipeline.h  remove_baseline.h  stopwatch.h  strided_range.h  types.h  write_time_series.h
Scripts/: Makefile  Makefile.am  Makefile.in  frb_detector.py  trans_cand_server.py  trans_freqplus_plot.py  trans_gen_candidate.py  trans_gen_overview.py  trans_paths.py.in  trans_utmost_overview.py
Share/: Makefile.am  dm2000.list
config/: cuda.m4  dedisp.m4  package.m4  psrdada.m4  thrust-1.6.m4
